package at.technikum_wien;

public enum Element {
    Water,
    Fire,
    Normal

}
