package at.technikum_wien;

public enum MonsterType {
    Goblin,
    Wizard,
    Ork,
    Knight,
    Kraken,
    Elf,
    Dragon
}
